--- a/style.css
+++ b/style.css
@@ -69,3 +69,8 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+}
